Fixed small modal z-index issue

--- a/app/static/css/layout/layout.css
+++ b/app/static/css/layout/layout.css
@@ -6,7 +6,6 @@ body {
 .ignore-nav {
   position: relative;
   top: -42px;
-  z-index: 10000;
 }
 
 /*
